Upcoming:
- Fixed programmer card tooltip

1.16-4.0.10:
- Fixed integration between RFTools Control and RFTools Storage for the screen modules

1.16-4.0.9:
- Fixed a problem with the storage control module which wouldn't fit in the processor anymore

1.16-4.0.8:
- It is again possible to drag items into programmer item slots

1.16-4.0.7:
- Update for McJtyLib tooltip rendering

1.16-4.0.6:
- Popup errors in gui's now fit their text better
- Clipboard support in the programmer is working again

1.16-4.0.5:
- Fixed a bug in the crafting station
- Update to latest McJtyLib

1.16-4.0.4-beta:
- Update to latest McJtyLib

4.0.3-beta:
- Fixed a problem on servers

4.0.2-beta:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes
- Fixed a problem with spawner configuration loading on servers

4.0.1-beta:
- Fixed a potential exploit which could be used to attack a server

4.0.0-beta:
- First port to 1.16.2

3.0.5:
- Fixed a potential exploit which could be used to attack a server

3.0.4-beta:
- Update for latest McJtyLib

3.0.3-beta:
- Update for latest McJtyLib

3.0.2-beta:
- Fixed a problem with fetching variables and fluids from a processor through a tablet

3.0.1-beta:
- Dependency fix

3.0.0-beta:
- First port of RFTools Control to 1.15
- Removed all oredictionary related parameters
- New 'test_tag' opcode to test if an item contains a tag
- New 'eval_gettags' opcode to get all tags for an item
- The filter module can now also be inserted in the processor (in the expansion slots)
- New 'test_filter' opcode to test if an item matches a filter
- New 'do_fetchitems_filter' opcode to fetch items from an inventory that match the given filter
- Fixed the recipes for the vanilla recipe book
- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)

2.0.2:
- Fixed a bug where the storage card module wouldn't always get recognized by the processor